tests/NormalTests/paczka1/small_fuzzy/72597159.err
Error in line 4: 646blvl S0 23,4
Error in line 7: jdcBu S0 56,8
Error in line 8: jdcBu S0 192,6
Error in line 9: 646blvl S0 42,4
Error in line 10: jdcBu S97 78,1
